<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBFBF8"
    tools:context=".PracticasMetro">

    <Button
        android:id="@+id/Btn_M1"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="156dp"
        android:backgroundTint="#F30606"
        android:text="@string/practica_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/Btn_M2"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#F30606"
        android:text="@string/práctica_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Btn_M1"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/Btn_M3"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#F30606"
        android:text="@string/práctica3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Btn_M2"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/Btn_M4"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#F30606"
        android:text="@string/práctica_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Btn_M3"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/Btn_M5"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#F30606"
        android:text="@string/práctica_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Btn_M4"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/prac_metr"
        android:layout_width="285dp"
        android:layout_height="123dp"
        android:text="Prácticas Metrología"
        android:textColor="#090909"
        android:textSize="48sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="73dp"
        tools:layout_editor_absoluteY="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>